# speaker-detector

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt  server copy.py  server.py  speakers.json
speaker_detector/: cli.py  core.py
static/: script copy.js  script.js  style copy.css  style.css
templates/: index - Copy.html  index copy 2.html  index copy.html  index.html
tmp-model/: classifier.ckpt  embedding_model.ckpt  hyperparams.yaml  label_encoder.ckpt  mean_var_norm_emb.ckpt
